prod/google-cloud/10-corp-apps/1-traefix-dashboard/ingress-route-with-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-basicauth
  namespace: corp-apps
spec:
  basicAuth:
    secret: traefik-basicauth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls
  namespace: corp-apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.kirbyware.io`)
      kind: Rule
      middlewares:
        - name: traefik-middleware-basicauth
          namespace: corp-apps
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-kirbyware-io-production-tls
